codex-rs/tui/src/airs_onboarding/snapshots/codex_tui__airs_onboarding__tests__airs_access_denied_80x24.snap
---
source: tui/src/airs_onboarding/onboarding_tests.rs
expression: "text(&render_buffer(80, 24, OnboardingOptions\n{ animations: false, color: false }, &View::Message(&progress)))"
---

                   ▄
                 ▄██▄
               ▄███ █▄          PRISMA AIRS
              ████  ██▄
               ▀█▄▄▄▀▀▀         Your secure agent workspace
                 ▀██
                   ▀

       Environment  work
       https://gateway.example.com/v1

       Credential saved · gateway access needs attention

       Credential saved; the gateway denied access. Check your workspace
       permissions, then retry with airs doctor --verify-access.






       Enter Continue   ↑↓ Scroll   Esc Exit
