codex-rs/tui/src/airs_onboarding/snapshots/codex_tui__airs_onboarding__tests__airs_input_80x24.snap
---
source: tui/src/airs_onboarding/onboarding_tests.rs
expression: "text(&render_buffer(80, 24, options, &View::Input\n{ field: &field, editor: &editor }))"
---


               ▄▄██▀▄▄
             ██▀█▀▀█▄▄██▄▄      PRISMA AIRS
             ███    █ ▄▄▀
             ▀██▀█▀▀█▀▀         Your secure agent workspace
                ▀▀▄▀


       Environment  work
       https://gateway.example.com/v1

       Connect your environment

       AI Gateway URL
       › https://gateway.example.com/v1

       Enter an HTTPS URL without a username or password.




       Enter Continue   Esc Back   Ctrl+U Clear
