codex-rs/tui/src/airs_onboarding/snapshots/codex_tui__airs_onboarding__tests__airs_progress_80x24.snap
---
source: tui/src/airs_onboarding/onboarding_tests.rs
expression: "text(&render_buffer(80, 24, options, &View::Progress(&progress)))"
---


               ▄▄██▀▄▄
             ██▀█▀▀█▄▄██▄▄      PRISMA AIRS
             ███    █ ▄▄▀
             ▀██▀█▀▀█▀▀         Your secure agent workspace
                ▀▀▄▀


       Environment  work
       https://gateway.example.com/v1

       Waiting for company sign-in

       Complete sign-in in your browser, then return here.

       Open in your browser:
       https://sso.example.com/authorize?client_id=harness-native




       ↑↓ Scroll   Esc / Ctrl+C Cancel
