codex-rs/tui/src/airs_onboarding/snapshots/codex_tui__airs_onboarding__tests__airs_welcome_48x18.snap
---
source: tui/src/airs_onboarding/tests.rs
expression: "text(&render_buffer(48, 18, options, &view))"
---

 PRISMA AIRS


 Environment  work

 Sign in to continue

 › 1. Sign in with company SSO
      Continue securely in your browser
   2. Use a workspace API key
      Enter a key from your administrator
   3. Choose another environment
      Keep each workspace and identity separate


 ↑↓ Navigate   Enter Select   Esc / Ctrl+C Exit
