codex-rs/tui/src/airs_onboarding/snapshots/codex_tui__airs_onboarding__tests__prisma_airs_mark.snap
---
source: tui/src/airs_onboarding/onboarding_tests.rs
expression: text(&static_mark)
---
            ▄
          ▄██
        ▄████
      ▄█████ █
    ▄██████  ██
  ▄███████   ███▄
  ▀██████    ████▄
    ▀███     █████▄
      ▀██████
        ▀████
          ▀██
            ▀
